# multi-agentic-systems

./: .gitignore  README.md  pyproject.toml
codes/: 1_RAG.py  2_single_agent.py  3_multi_agentic.py  4_multi_agentic_system_1.py  5_multi_agent_w_self_reflection.py  6_full_multi_agentic_flow.py  evolution.txt  imports_for_all_systems.py  memory.pkl
codes/docs/: doc1.txt  doc2.txt  doc3.txt  doc4.txt  doc5.txt
codes/theory/: 4_multi_agentic_system_architecture.txt  5_agents_w_self_reflection.txt
